Refactoring player and bat move methods

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -67,15 +67,15 @@
                 </Grid>
                 <Grid Grid.Column="1">
                     <Border Padding="10,10,0,0">
-                        <Canvas x:Name="Stage" Background="#7F363636" Margin="63,0,33,10">
+                        <Canvas x:Name="Stage" Width="530" Height="380" Background="#7F363636" Margin="63,0,33,10">
                             <!--<Image Source="Assets/Images/sword.png" Width="70"/>
                                 <Image Source="Assets/Images/flail.png" Width="50"/>
                                 <Image Source="Assets/Images/bow.png" Width="50"/>
                                 <Image Source="Assets/Images/bat.png" Width="50"/>-->
                             <Image Source="Assets/Images/ghost.png" Width="80"/>
                             <Image Source="Assets/Images/zombie.png" Width="70"/>
-                            <Rectangle Name="playerBox" Width="80" Height="103" Fill="Yellow" Canvas.Left="220" Canvas.Top="144" Stroke="Red" StrokeThickness="2"/>
-                            <Rectangle Name="batBox" Width="50" Height="50" Fill="#FF47422E" Stroke="GreenYellow" StrokeThickness="2"/>
+                            <Rectangle Name="playerBox" Width="80" Height="103" Fill="Yellow" Canvas.Left="10" Canvas.Top="245" Stroke="Red" StrokeThickness="2"/>
+                            <Rectangle Name="batBox" Width="50" Height="50" Fill="#FF47422E" Stroke="GreenYellow" StrokeThickness="2" Canvas.Left="373"/>
                             <!--<Rectangle Name="player" Width="71" Height="100" Fill="Yellow" />-->
                         </Canvas>
                     </Border>
