--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -31,7 +31,11 @@
                 </Grid.ColumnDefinitions>
 
                 <Grid Grid.Column="0">
-                    <Image Source="Assets/Images/bluePotion.png" Width="45"/>
+                    <Rectangle Name="swordIcon" Margin="52,9,53,10" Stroke="White" StrokeThickness="2" Visibility="Hidden">
+                        <Rectangle.Fill>
+                            <ImageBrush ImageSource="Assets/Images/sword.png" Stretch="Uniform"/>
+                        </Rectangle.Fill>
+                    </Rectangle>
                 </Grid>
                 <Grid Grid.Column="1">
                     <Image Source="Assets/Images/greenPotion.png" Width="45"/>
@@ -58,8 +62,8 @@
                 <Grid Grid.Column="0">
                     <Border Padding="10,10,0,0">
                         <StackPanel>
-                            <Label Name="lblPlayer" FontWeight="Bold" FontSize="20" Foreground="#ffffff"/>
-                            <Label Name="lblEnemy1" FontWeight="Bold" FontSize="20" Foreground="#ffffff"/>
+                            <Label Name="playerHitPoints" FontWeight="Bold" FontSize="20" Foreground="#ffffff"/>
+                            <Label Name="batHitPoints" FontWeight="Bold" FontSize="20" Foreground="#ffffff"/>
                             <Label Name="lblEnemy2" FontWeight="Bold" FontSize="20" Foreground="#ffffff"/>
                             <Label Name="lblEnemy3" FontWeight="Bold" FontSize="20" Foreground="#ffffff"/>
                         </StackPanel>
@@ -73,9 +77,9 @@
                                 <Image Source="Assets/Images/bat.png" Width="50"/>-->
                             <Image Source="Assets/Images/ghost.png" Width="80"/>
                             <Image Source="Assets/Images/zombie.png" Width="70"/>
-                            <Rectangle Name="playerBox" Width="80" Height="103" Fill="Yellow" Canvas.Left="10" Canvas.Top="245" Stroke="Red" StrokeThickness="2"/>
-                            <Rectangle Name="batBox" Width="50" Height="50" Fill="#FF47422E" Stroke="GreenYellow" StrokeThickness="2" Canvas.Left="373"/>
-                            <Rectangle Name="swordBox" Width="70" Height="52" Fill="#FFC35ABE" Stroke="#FF2FE3FF" StrokeThickness="2" Canvas.Left="97" Canvas.Top="-2"/>
+                            <Rectangle Name="playerBox" Width="80" Height="103" Fill="Yellow" Canvas.Left="10" Canvas.Top="245" />
+                            <Rectangle Name="batBox" Width="50" Height="50" Fill="#FF47422E" Canvas.Left="373"/>
+                            <Rectangle Name="swordBox" Width="70" Height="52" Fill="#FFC35ABE" />
                         </Canvas>
                     </Border>
                 </Grid>
@@ -132,7 +136,7 @@
                         <ColumnDefinition Width="*"/>
                     </Grid.ColumnDefinitions>
                     <Grid Grid.Column="1">
-                        <Button HorizontalAlignment="Center" VerticalAlignment="Top" Width="40" Height="40">
+                        <Button HorizontalAlignment="Center" VerticalAlignment="Top" Width="40" Height="40" Cursor="Hand" Click="btnAttackUp_Click">
                             <Button.Background>
                                 <ImageBrush ImageSource="Assets/Images/arrowuP.png" Stretch="UniformToFill"/>
                             </Button.Background>
