--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -9,7 +9,7 @@
 
     <Canvas>
         <Canvas.Background>
-            <ImageBrush ImageSource="dungeon01.jpg"/>
+            <ImageBrush ImageSource="Assets/Images/dungeon01.jpg"/>
         </Canvas.Background>
 
         <Grid>
@@ -78,7 +78,11 @@
                             <Image Source="Assets/Images/ghost.png" Width="80"/>
                             <Image Source="Assets/Images/zombie.png" Width="70"/>
                             <Rectangle Name="playerBox" Width="80" Height="103" Fill="Yellow" Canvas.Left="10" Canvas.Top="245" />
-                            <Rectangle Name="batBox" Width="50" Height="50" Fill="#FF47422E" Canvas.Left="373" Canvas.Top="0" />
+                            <Rectangle Name="batBox" Tag="Bat" Width="50" Height="50" Canvas.Left="373" Canvas.Top="0" >
+                                <Rectangle.Fill>
+                                    <ImageBrush ImageSource="bat.png" Stretch="UniformToFill"/>
+                                </Rectangle.Fill>
+                            </Rectangle>
                             <Rectangle Name="swordBox" Width="70" Height="52" Fill="#FFC35ABE" />
                         </Canvas>
                     </Border>
